--- a/src/sass/dummy.scss
+++ b/src/sass/dummy.scss
@@ -2,54 +2,42 @@
 
 .dummy {
   overflow: hidden;
-  -webkit-transition: height 1s ease;
   transition: height 1s ease;
   height: auto;
 }
 
 .dummy__item {
-	-webkit-transition: -webkit-transform 0.5s;
 	transition: transform 0.5s;
-	-webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
 }
 
 .dummy__item {
-	-webkit-transform: translate3d(-100%, 0, 0) translate3d(-2em, 0, 0) scale3d(0.5, 1, 1);
-	transform: translate3d(-100%, 0, 0) translate3d(-2em, 0, 0) scale3d(0.5, 1, 1);
-	-webkit-transform-origin: 100% 50%;
+	transform: translate3d(-100%, 0, 0) translate3d(-2em, 0, 0);
 	transform-origin: 100% 50%;
-  -webkit-transform: translate3d(0, 260px, 0) scale3d(1, 0.2, 1);
-	transform: translate3d(0, 260px, 0) scale3d(1, 0.2, 1);
+	transform: translate3d(0, 260px, 0);
 }
 
 .dummy--active .dummy__item {
-	-webkit-transition-timing-function: cubic-bezier(0.56, 1.19, 0.2, 1.05);
 	transition-timing-function: cubic-bezier(0.56, 1.19, 0.2, 1.05);
-	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
 }
 
 .dummy__item:nth-child(4),
 .dummy--active .dummy__item:first-child {
-	-webkit-transition-delay: 0.05s;
 	transition-delay: 0.05s;
 }
 
 .dummy__item:nth-child(3),
 .dummy--active .dummy__item:nth-child(2) {
-	-webkit-transition-delay: 0.1s;
 	transition-delay: 0.1s;
 }
 
 .dummy__item:nth-child(2),
 .dummy--active .dummy__item:nth-child(3) {
-	-webkit-transition-delay: 0.15s;
 	transition-delay: 0.15s;
 }
 
 .dummy__item:first-child,
 .dummy--active .dummy__item:nth-child(4) {
-	-webkit-transition-delay: 0.2s;
 	transition-delay: 0.2s;
 }
