--- a/src/sass/quiz.scss
+++ b/src/sass/quiz.scss
@@ -110,16 +110,6 @@ body {
       outline: 0;
     }
   }
-
-  &.hide {
-    display: none;
-  }
-}
-
-#quiz {
-  &.hide {
-    display: none;
-  }
 }
 
 #statistic {
@@ -154,6 +144,10 @@ body {
   }
 }
 
+.hide {
+  display: none;
+}
+
 .current-question {
   clear: both;
 }
@@ -170,7 +164,7 @@ body {
   }
 }
 
-#answers {
+#answers, .game-over {
   margin-top: 30px;
   padding: 20px;
 
@@ -258,21 +252,30 @@ body {
 }
 
 .game-over {
-  #question {
-    display: none;
+  font-size: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 80px;
+  color: #0495e8;
+  .start-again {
+    font-size: 18px;
+  }
+  .result {
+    font-size: 24px;
   }
 
-  #answers {
-    font-size: 30px;
-    text-transform: uppercase;
-    text-align: center;
-    line-height: 80px;
-    color: #0495e8;
-    .start-again {
-      font-size: 18px;
-    }
-    .result {
-      font-size: 24px;
+  .start-again {
+    border: 1px solid darken(#0495e8, 10%);
+    background: #0495e8;
+    outline: none;
+    margin: 0;
+    color: white;
+    border-radius: 5px;
+    padding: 4px 30px 0;
+    cursor: pointer;
+
+    &:hover {
+      background: lighten(#0495e8, 10%);
     }
   }
 }
